lb/nexus.yaml
# [START jenkins_service_ui]
---
kind: Service
apiVersion: v1
metadata:
  name: nexus-lb
  namespace: build
  labels:
    app: nexus-ui-lb
spec:
  type: LoadBalancer
  selector:
    app: nexus
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8081
      name: ui
# [END jenkins_service_ui]
