lb/ingress.yaml
# Copyright 2015 Google Inc. All rights reserved.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: build-ingress
  namespace: build
  annotations:
    kubernetes.io/ingress.class: "nginx"
  #   nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/enable-rewrite-log: true
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/add-base-url : "false"
  #   nginx.ingress.kubernetes.io/enable-cors: "true"
  #   nginx.ingress.kubernetes.io/cors-allow-methods: "PUT, GET, POST, OPTIONS"
spec:
  # backend:
  #   serviceName: jenkins-ui
  #   servicePort: 8080
  # tls:
  # - secretName: tls
  rules:
  - host: jenkins.osnz.co.nz
    http:
      paths:
      - backend:
          serviceName: jenkins-ui
          servicePort: 80

  - host: nexus.osnz.co.nz
    http:
      paths:
      - backend:
          serviceName: nexus-ui
          servicePort: 80

  - host: app.osnz.co.nz
    http:
      paths:
      - path: /nexus
        backend:
          serviceName: nexus-ui
          servicePort: 80
      - path: /jenkins
        backend:
          serviceName: jenkins-ui
          servicePort: 80
